--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node --env-file=.env ./app/index.js",
-    "dev": "node --watch ./app/index.js",
+    "dev": "node --watch --env-file=.env ./app/index.js",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "node --watch ./app/tests/users.test.js"
@@ -15,6 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-perfectionist": "^2.7.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5"
   },
   "dependencies": {
