--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^5.2.3",
     "mongoose": "^8.2.1"
   }
 }
